# flask-observability

./: .pre-commit-config.yaml  .travis.yml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
flask_observability/: __init__.py
tests/: test_extension.py
