[metadata]
name = flask-observability
author = Adimian
author-email = contact@adimian.com
description = InfluxDB-based observability utilities for Flask
description-file = README.md
url = https://github.com/adimian/flask-observability
description-content-type = text/markdown

[files]
packages =
    flask_observability

[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401
